--- a/src/app/pages/qc/qc.component.html
+++ b/src/app/pages/qc/qc.component.html
@@ -57,6 +57,10 @@
       </button>
       
       <div class="right-buttons-wrapper">
+        <button class="home-btn" (click)="goToMenu()" title="Về Menu">
+          <i class="material-icons">home</i>
+          Home
+        </button>
         <button class="logout-btn" (click)="logout()" title="Đăng xuất">
           <i class="material-icons">logout</i>
           Đăng xuất
