--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,13 +3,17 @@
         <div class="navbar-wrapper">
           <a class="navbar-brand" href="javascript:void(0)">{{getTitle()}}</a>
         </div>
-        <button mat-raised-button class="navbar-toggler" type="button" (click)="sidebarToggle()">
+        <button mat-raised-button class="navbar-toggler" type="button" (click)="sidebarToggle()" *ngIf="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="navbar-toggler-icon icon-bar"></span>
             <span class="navbar-toggler-icon icon-bar"></span>
             <span class="navbar-toggler-icon icon-bar"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
+            <!-- Home Button - Right Top -->
+            <button mat-raised-button class="btn-home me-3" (click)="goToMenu()" *ngIf="!isMenuPage() && !isQCPage()" title="Về Menu">
+              <i class="material-icons">home</i>
+            </button>
             <!-- ASM1 and ASM2 Icons -->
             <div class="asm-icons" *ngIf="isDashboard()">
                 <button mat-raised-button class="btn btn-white btn-just-icon me-2" (click)="selectFactory('ASM1')" [class.active]="selectedFactory === 'ASM1'" style="color: #1976d2; border: none;" [style.background]="selectedFactory === 'ASM1' ? '#fce4ec' : 'transparent'">
