--- a/src/app/pages/menu/menu.component.html
+++ b/src/app/pages/menu/menu.component.html
@@ -7,10 +7,6 @@
           <p class="menu-subtitle">Warehouse Management System</p>
         </div>
       </div>
-      <button class="logout-btn" (click)="logout()" title="Đăng xuất">
-        <i class="material-icons">logout</i>
-        <span>Đăng xuất</span>
-      </button>
     </div>
   </div>
 
@@ -102,5 +98,13 @@
         </div>
       </ng-container>
     </div>
+  </div>
+  
+  <!-- Logout Button at Bottom -->
+  <div class="menu-footer">
+    <button class="logout-btn" (click)="logout()" title="Đăng xuất">
+      <i class="material-icons">logout</i>
+      <span>Đăng xuất</span>
+    </button>
   </div>
 </div>
