--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -62,6 +62,8 @@
     align-items: center !important;
     justify-content: center !important;
     z-index: 1000 !important;
+    margin-left: auto !important;
+    order: 999 !important;
 }
 
 .btn-home:hover {
